# advent-of-code

./: .gitignore  .gitmodules  README.md
2015/: Cargo.toml
2015/src/: main.rs
2015/src/d1/: mod.rs
2015/src/d10/: mod.rs
2015/src/d11/: mod.rs
2015/src/d12/: mod.rs
2015/src/d14/: mod.rs
2015/src/d15/: mod.rs
2015/src/d16/: mod.rs
2015/src/d17/: mod.rs
2015/src/d18/: mod.rs
2015/src/d19/: mod.rs
2015/src/d2/: mod.rs
2015/src/d3/: mod.rs
2015/src/d4/: mod.rs
2015/src/d5/: mod.rs
2015/src/d6/: mod.rs
2015/src/d7/: mod.rs
2015/src/d8/: mod.rs
2015/src/d9/: mod.rs
2020/d1/: data_real.txt  mod.py
2020/d10/: mod.py
2020/d11/: mod.py
2020/d12/: mod.py
2020/d2/: mod.py
2020/d3/: mod.py
2020/d4/: mod.py
2020/d5/: mod.py
2020/d6/: mod.py
2020/d7/: mod.py
2020/d8/: mod.py
2020/d9/: mod.py
2021/: .gitignore  d10.ts  d11.ts  d12.ts  d13.ts  d14.ts  d15.ts  d15_old.ts  d16.ts  d17.ts  d18.ts  d2.ts  d20.ts  d21.ts  d22.ts  d3.ts  d4.ts  d5.ts  d6.ts  d7.ts  d8.ts  d9.ts  gulpfile.js  main.ts  package-lock.json  package.json  tsconfig.json
2021/data/: d10_data.ts  d11_data.ts  d13_data.ts  d14_data.ts  d15_data.ts  d20_data.ts  d5_data.ts  d8_data.ts  d9_data.ts  dataHelpers.ts
2022/: Cargo.toml
2023/: .gitignore  CMakeLists.txt  README.md
2023/src/: main.cpp2
2023/src/d1/: d1.cpp2  d1.h2
2023/src/d10/: d10.cpp2  d10.h2
2023/src/d11/: d11.cpp2  d11.h2
2023/src/d12/: d12.cpp2  d12.h2
2023/src/d13/: d13.cpp2  d13.h2
2023/src/d14/: d14.cpp2  d14.h2
2023/src/d15/: d15.cpp2  d15.h2
2023/src/d16/: d16.cpp2  d16.h2
2023/src/d17/: d17.cpp2  d17.h2
2023/src/d18/: d18.cpp2  d18.h2
2023/src/d19/: d19.cpp2  d19.h2
2023/src/d1_2022/: d1_2022.cpp2  d1_2022.h2
2023/src/d2/: d2.cpp2  d2.h2
2023/src/d3/: d3.cpp2  d3.h2
2023/src/d4/: d4.cpp2  d4.h2
2023/src/d5/: d5.cpp2  d5.h2
2023/src/d6/: d6.cpp2  d6.h2
2023/src/d7/: d7.cpp2  d7.h2
2023/src/d8/: d8.cpp2  d8.h2
2023/src/d9/: d9.cpp2  d9.h2
2023/src/dX/: dX.cpp2  dX.h2
2023/src/test/: test.cpp2  test.h2
2025/: 2025.slnx
2025/D1/: D1.cs  (+1 more)
(+107 files in other folders)
