[package]
name = "aoc_2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "utilities" }
function_name = "0.3"
itertools = "0.10.5"
num = "0.4.0"
lazy_static = "1.4.0"
regex = "1.7.1"
crypto-common = "0.1.6"
md-5 = "0.10.5"
json = "0.12.4"
bit_field = "0.10.2"
 